--- a/css/style.css
+++ b/css/style.css
@@ -2,10 +2,28 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    background-color: black;
 }
 
-body{
-    padding: 2px;
-    margin: 0;
-    padding: 0;
+.contenedorGeneral{
+    font-family: 'Caveat', cursive;
+}
+
+.contenedorGeneral > h1{
+    position: relative;
+    width: 100%;
+    margin: 40px 0px 40px 0px;
+    text-align: center;
+}
+
+.contenedorGeneral > h1::after{
+    border: none;
+    content: "BILL DETAILS";
+    width: 100%;
+    color: rgb(255, 0, 0);
+    text-shadow: 2px 2px 4px red;
+    font-size: 100%;
+    position: absolute;
+    left: 0px;
+    top: -5px;
 }
