--- a/view/my-header.html
+++ b/view/my-header.html
@@ -4,38 +4,38 @@
     <div class="text-center pt-5 pb-4"><h1>HEADER THE BILL</h1></div>
     <div class="row contenedoresInput row-cols-1 row-cols-md-3 px-4">
         <div>
-            <label for="N_Bill" class="form-label">INVOICE NUMBER</label>
-            <input type="number" class="form-control py-2" name="N_Bill" id="N_Bill" placeholder="Type to number bill">
+            <label for="N_Invoice" class="form-label">INVOICE NUMBER</label>
+            <input type="number" class="form-control py-2" name="N_Invoice" id="N_Invoice">
         </div>
         <div>
-            <label for="Bill_Date" class="form-label">INVOICING DATE</label>
-            <input type="date" class="form-control py-2 mb-4" name="Bill_Date" id="Bill_Date" placeholder="Type to number bill">
+            <label for="D_Invoicing" class="form-label">INVOICING DATE</label>
+            <input type="date" class="form-control py-2 mb-4" name="D_Invoicing" id="D_Invoicing">
         </div>
         <div>
             <label for="Seller" class="form-label">SELLER</label>
-            <input type="text" class="form-control py-2 mb-4" name="Seller" id="Seller" placeholder="Type to number bill">
+            <input type="text" class="form-control py-2 mb-4" name="Seller" id="Seller">
         </div>
 
         <div>
-            <label for="Seller" class="form-label">CLIENT ID</label>
-            <input type="text" class="form-control py-2 mb-4" name="Seller" id="Seller" placeholder="Type to number bill">
+            <label for="ID_Client" class="form-label">CLIENT ID</label>
+            <input type="number" class="form-control py-2 mb-4" name="ID_Client" id="ID_Client">
         </div>
         <div>
-            <label for="Seller" class="form-label">NAME AND LAST NAME</label>
-            <input type="text" class="form-control py-2 mb-4" name="Seller" id="Seller" placeholder="Type to number bill">
+            <label for="Name_LastName" class="form-label">NAME AND LAST NAME</label>
+            <input type="text" class="form-control py-2 mb-4" name="Name_LastName" id="Name_LastName">
         </div>
         <div>
-            <label for="Seller" class="form-label">CLIENT EMAIL</label>
-            <input type="text" class="form-control py-2 mb-4" name="Seller" id="Seller" placeholder="Type to number bill">
+            <label for="Email_Client" class="form-label">CLIENT EMAIL</label>
+            <input type="text" class="form-control py-2 mb-4" name="Email_Client" id="Email_Client">
         </div>
         
         <div>
-            <label for="Seller" class="form-label">CLIENT ADDRESS</label>
-            <input type="text" class="form-control py-2 mb-4" name="Seller" id="Seller" placeholder="Type to number bill">
+            <label for="Client_Address" class="form-label">CLIENT ADDRESS</label>
+            <input type="text" class="form-control py-2 mb-4" name="Client_Address" id="Client_Address">
         </div>
         <div>
-            <label for="Seller" class="form-label">CLIENT PHONE</label>
-            <input type="text" class="form-control py-2 mb-4" name="Seller" id="Seller" placeholder="Type to number bill">
+            <label for="Client_Phone" class="form-label">CLIENT PHONE</label>
+            <input type="text" class="form-control py-2 mb-4" name="Client_Phone" id="Client_Phone">
         </div>
     </div>
 </div>
