--- a/css/style.css
+++ b/css/style.css
@@ -27,3 +27,48 @@
     left: 0px;
     top: -5px;
 }
+
+.botonesAddEnd{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+}
+
+.botonesAddEnd button{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 25%;
+    margin: 0px 10px 30px 10px;
+    border: none;
+    color: white;
+}
+
+input[type=number]::-webkit-inner-spin-button, 
+input[type=number]::-webkit-outer-spin-button { 
+  -webkit-appearance: none; 
+  margin: 0; 
+}
+
+input[type=number] { -moz-appearance:textfield; }
+
+@media (max-width: 768px) {
+    .botonesAddEnd{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+}
+
+@media (max-width: 548px) {
+    .botonesAddEnd button{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 49%;
+        margin: 0px 10px 30px 10px;
+        border: none;
+        color: white;
+    }
+}
