--- a/view/my-header.html
+++ b/view/my-header.html
@@ -1,46 +1,47 @@
 <h1 class="col-12 mt-5 mb-4 text-center titulo">HUNTERS BILLING SYSTEM</h1>
 
 <div class="contenedorHeader">
-    <div class="text-center pt-5 pb-4"><h1>HEADER THE BILL</h1></div>
+    <div class=" text-center pt-2 pb-4"><h1>HEADER THE BILL</h1></div>
     <div class="row contenedoresInput row-cols-1 row-cols-md-3 px-4">
         <div>
             <label for="N_Invoice" class="form-label">INVOICE NUMBER</label>
-            <input type="number" class="form-control py-2 mb-4" name="N_Invoice" id="N_Invoice">
+            <input type="number" class="form-control py-2 mb-4" name="N_Invoice">
         </div>
         <div>
             <label for="D_Invoicing" class="form-label">INVOICING DATE</label>
-            <input type="date" class="form-control py-2 mb-4" name="D_Invoicing" id="D_Invoicing">
+            <input type="date" class="form-control py-2 mb-4" name="D_Invoicing">
         </div>
         <div>
             <label for="Seller" class="form-label">SELLER</label>
-            <input type="text" class="form-control py-2 mb-4" name="Seller" id="Seller">
+            <input type="text" class="form-control py-2 mb-4" name="Seller">
         </div>
 
         <div>
             <label for="ID_Client" class="form-label">CLIENT ID</label>
-            <input type="number" class="form-control py-2 mb-4" name="ID_Client" id="ID_Client">
+            <input type="number" class="form-control py-2 mb-4" name="ID_Client">
         </div>
         <div>
             <label for="Name_LastName" class="form-label">NAME AND LAST NAME</label>
-            <input type="text" class="form-control py-2 mb-4" name="Name_LastName" id="Name_LastName">
+            <input type="text" class="form-control py-2 mb-4" name="Name_LastName">
         </div>
         <div>
             <label for="Email_Client" class="form-label">CLIENT EMAIL</label>
-            <input type="email" class="form-control py-2 mb-4" name="Email_Client" id="Email_Client">
+            <input type="email" class="form-control py-2 mb-4" name="Email_Client">
         </div>
         
         <div>
             <label for="Client_Address" class="form-label">CLIENT ADDRESS</label>
-            <input type="text" class="form-control py-2 mb-4" name="Client_Address" id="Client_Address">
+            <input type="text" class="form-control py-2 mb-4" name="Client_Address">
         </div>
         <div>
             <label for="Client_Phone" class="form-label">CLIENT PHONE</label>
-            <input type="number" class="form-control py-2 mb-4" name="Client_Phone" id="Client_Phone">
+            <input type="number" class="form-control py-2 mb-4" name="Client_Phone">
         </div>
     </div>
 </div>
 
 <style>
+
     .titulo::after{
         border: none;
         content: "HUNTERS BILLING SYSTEM";
@@ -79,7 +80,7 @@
         font-size: 100%;
         position: absolute;
         left: 0px;
-        top: 40px;
+        top: 0px;
     }
 
     .row {
