--- a/view/my-product.html
+++ b/view/my-product.html
@@ -65,8 +65,15 @@
         align-items: center;
     }
 
+    .botones button{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
     .botones .bgAdd,
     .botones .bgRemove{
+        font-size: 24px;
         color: white;
         width: 80%;
     }
