--- a/css/style.css
+++ b/css/style.css
@@ -9,8 +9,9 @@ body{
     font-family: 'Caveat', cursive;
 }
 
-.contenedorGeneral{
-    background-color: green;
+.particles{
+    position: relative;
+    width: 100%;
 }
 
 .particles > h1{
@@ -18,6 +19,10 @@ body{
     width: 100%;
     margin: 40px 0px 40px 0px;
     text-align: center;
+}
+
+.particles > h1{
+    font-size: 34px;
 }
 
 .particles > h1::after{
@@ -39,3 +44,21 @@ input[type=number]::-webkit-outer-spin-button {
 }
 
 input[type=number] { -moz-appearance:textfield; }
+
+::-webkit-scrollbar-track
+{
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	background-color: #F5F5F5;
+	border-radius: 10px;
+}
+
+::-webkit-scrollbar
+{
+	width: 10px;
+	background-color: #F5F5F5;
+}
+
+::-webkit-scrollbar-thumb
+{
+	background-color: rgba(0, 0, 0, 0.5);
+}
