--- a/view/my-header.html
+++ b/view/my-header.html
@@ -1,8 +1,8 @@
-<h1 class="col-12 mt-5 mb-4 text-center titulo">HUNTERS BILLING SYSTEM</h1>
+<h1 class="tituleHunters col-12 mt-5 mb-4 text-center titulo">HUNTERS BILLING SYSTEM</h1>
 
 <div class="contenedorHeader">
     <div class=" text-center pt-2 pb-4"><h1>HEADER THE BILL</h1></div>
-    <div class="row contenedoresInput row-cols-1 row-cols-md-3 px-4">
+    <div class="row contenedoresInput row-cols-1 row-cols-md-3 px-4 mb-4">
         <div>
             <label for="N_Invoice" class="form-label">INVOICE NUMBER</label>
             <input type="number" class="form-control py-2 mb-4" name="N_Invoice">
@@ -56,6 +56,7 @@
 
     .contenedorHeader{
         width: 80%;
+        height: 422px;
         border: 1px solid white;
         border-radius: 2px;
         margin-left: 50%;
@@ -70,6 +71,10 @@
         text-align: center;
         justify-content: center;
         align-items: center;
+    }
+
+    .tituleHunters {
+        font-size: 46px;
     }
 
     .contenedorHeader h1::after{
@@ -129,5 +134,11 @@
 
     .contenedoresInput div:nth-child(8) input{   
         box-shadow: 5px 5px 5px rgb(0, 225, 255);
+    }
+
+    @media (max-width: 767px) {
+        .contenedorHeader{
+            height: 100%;
+        }
     }
 </style>
