docs: :memo: Sistema Facturacion
Se cambia logica al momento de enviar los datos al php - se cambia en my-body.js

by: Jhon Hernandez

--- a/view/my-header.html
+++ b/view/my-header.html
@@ -9,7 +9,7 @@
         </div>
         <div>
             <label for="D_Invoicing" class="form-label">INVOICING DATE</label>
-            <input type="date" class="form-control py-2 mb-4" name="D_Invoicing">
+            <input type="date" class="form-control py-2 mb-4" name="D_Invoice">
         </div>
         <div>
             <label for="Seller" class="form-label">SELLER</label>
@@ -22,7 +22,7 @@
         </div>
         <div>
             <label for="Name_LastName" class="form-label">NAME AND LAST NAME</label>
-            <input type="text" class="form-control py-2 mb-4" name="Name_LastName">
+            <input type="text" class="form-control py-2 mb-4" name="Name_Client">
         </div>
         <div>
             <label for="Email_Client" class="form-label">CLIENT EMAIL</label>
