--- a/view/my-product.html
+++ b/view/my-product.html
@@ -9,11 +9,11 @@
     </div>
     <div>
         <label for="amount" class="form-label">AMOUNT</label>
-        <input type="number" class="form-control py-2 mb-4" name="amount" value="0" readonly>
+        <input type="number" class="form-control py-2 mb-4" name="amount_Product" value="0" readonly>
     </div>
     <div>
         <label for="unit_Value" class="form-label">UNIT VALUE</label>
-        <input type="number" class="form-control py-2 mb-4" name="Unit_Value">
+        <input type="number" class="form-control py-2 mb-4" name="Unit_Value_Product">
     </div>
     <div class="botones mb-4 mb-md-0">
         <button type="button" class="bgAdd btn">+</button>
