docs: :memo: INVOICING SYSTEM
Se termina el apartado de app, desestructurar products

by: Jhon Hernandez

--- a/view/my-header.html
+++ b/view/my-header.html
@@ -1,4 +1,4 @@
-<h1 class="tituleHunters col-12 mt-5 mb-4 text-center titulo">HUNTERS BILLING SYSTEM</h1>
+<h1 class="col-12 mt-5 mb-4 text-center titulo">HUNTERS BILLING SYSTEM</h1>
 
 <div class="contenedorHeader">
     <div class=" text-center pt-2 pb-4"><h1>HEADER THE BILL</h1></div>
@@ -71,10 +71,6 @@
         text-align: center;
         justify-content: center;
         align-items: center;
-    }
-
-    .tituleHunters {
-        font-size: 46px;
     }
 
     .contenedorHeader h1::after{
