--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,17 @@ body{
     font-family: 'Caveat', cursive;
 }
 
+.diagram{
+    position: absolute;
+    width: 100%;
+    height: 200px;
+    margin-top: 100vh;
+}
+
+.diagram img{
+    width: 100%;
+}
+
 .particles{
     position: relative;
     width: 100%;
